ingress.yaml

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/auth-type: basic
    ingress.kubernetes.io/auth-secret: basic-auth
    ingress.kubernetes.io/auth-realm: "Authentication Required"
  name: kibana-ingress
spec:
  rules:
    - host: xpto.aa.com
      http:
        paths:
          - path: /
            backend:
              serviceName: kibana-kibana 
              servicePort: 5601
